--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ body {
     color: var(--first-color);
     background: var(--body-bg-color);
     overflow-x: hidden;
+    /* padding-top: 61px; */
 }
 
 .container {
@@ -179,3 +180,210 @@ img {
 }
 
 /* === end header ===  */
+
+/* <!-- ====== Home section ====== --> */
+.home {
+    padding: 80px 0;
+    min-height: 100vh;
+}
+
+.home-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+}
+
+.media-icons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.media-icons a {
+    color: var(--second-color);
+    font-size: 32px;
+}
+
+.media-icons a:hover {
+    color: var(--hover-color);
+}
+
+.home-info h1 {
+    font-size: 60px;
+    font-weight: 600px;
+    line-height: 1.2;
+}
+
+.home-info h3 {
+    color: var(--third-color);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 2;
+}
+
+.home-info p {
+    font-size: var(--normal-font-size);
+    color: var(--third-color);
+    max-width: 350px;
+    width: 100%;
+}
+
+.inner-info-link {
+    background: var(--second-color);
+    color: #fff;
+    font-size: var(--normal-font-size);
+    font-weight: 500;
+    display: inline-block;
+    margin-top: 25px;
+    padding: 20px 30px;
+    letter-spacing: 1px;
+    border-radius: 10px;
+}
+
+.inner-info-link:hover {
+    background: var(--hover-color);
+}
+
+.home-img {
+    width: 90%;
+}
+
+.scroll-down {
+    display: block;
+    margin: 20px auto 0;
+    width: 120px;
+    text-align: center;
+    color: var(--first-color);
+    font-size: var(--normal-font-size);
+    font-weight: 500;
+}
+
+.scroll-down i {
+    color: var(--second-color);
+    font-size: 18px;
+    animation: arrow-down ease 2s infinite;
+}
+
+@keyframes arrow-down {
+    0% {
+        transform: translateY(0);
+    }
+    30% {
+        transform: translateY(10px);
+    }
+}
+
+/* <!-- ===== end Home section ===== --> */
+
+/* =========== Style for all sections =========== */
+.section {
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    padding: 60px 0 20px;
+}
+
+.flex-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.inner-title {
+    font-size: 60px;
+    font-weight: 800;
+    margin-bottom: 20px;
+    background: linear-gradient(to top, transparent 0%, var(--first-color) 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: .1;
+}
+
+.inner-second-title {
+    position: relative;
+    font-size: 25px;
+    font-weight: 700;
+    transform: translateY(-55px);
+}
+
+.inner-second-title::before {
+    content: "";
+    position: absolute;
+    width: 70px;
+    height: 5px;
+    right: 0;
+    bottom: 0;
+    background: var(--second-color);
+}
+
+/* =========== end Style for all sections =========== */
+
+/* ====== About section ====== */
+.about-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.about-img {
+    max-width: 500px;
+    width: 100%;
+}
+
+.about-img img {
+    border-radius: 10px;
+}
+
+.about-info {
+    max-width: 600px;
+    width: 100%;
+}
+
+.description h3 {
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.description h4 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.description h4 span {
+    color: var(--second-color);
+}
+
+.description p {
+    color: var(--third-color);
+    font-size: var(--normal-font-size);
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 2px solid var(--liner-color);
+}
+
+.professional-list {
+    display: flex;
+    column-gap: 30px;
+}
+
+.list-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 15px;
+    margin-bottom: 20px;
+}
+
+.number {
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.text {
+    color: var(--third-color);
+    font-size: var(--small-font-size);
+}
+/* ====== end About section ====== */
